--- a/templates/admin/dashboard.twig
+++ b/templates/admin/dashboard.twig
@@ -5,7 +5,7 @@
 <body>
 <ul>
     <li><a href="/repositories">Manage Repos</a></li>
-    <li><a href="/servers">Manage Servers</a></li>
+    <li><a href="/servers">Manage ManageServers</a></li>
     <li><a href="/deployments">Manage Deployments</a></li>
     <li><a href="/permissionsMain">Manage User Permissions</a></li>
 </ul>
