--- a/templates/home.twig
+++ b/templates/home.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title>GitBert2</title>
+  <title>Hal</title>
  </head>
  <body>
   <p>Hello {{ account.givenname }}.</p>
