--- a/templates/home.twig
+++ b/templates/home.twig
@@ -6,7 +6,7 @@
  <body>
   <p>Hello {{ account.givenname }}.</p>
   <ul>
-   <li><a href="/adminMain">Admin</a></li>
+   <li><a href="/admin">Admin</a></li>
    <li><a href="/pushMain">Push tool</a></li>
    <li><a href="/login">Logout</a></li>
   </ul>
