--- a/templates/common/header.twig
+++ b/templates/common/header.twig
@@ -4,9 +4,11 @@
     <ul>
      <li><a href="/" title="project groups">Repository Groups</a></li>
      <li><a href="/admin" title="admin dashboard">Admin Dashboard</a></li>
+     <li><a href="/admin/envs" title="environment admin">Manage Environments</a></li>
      <li><a href="/admin/repositories" title="add/edit repositories">Manage Repositories</a></li>
      <li><a href="/admin/servers" title="add/edit servers">Manage Servers</a></li>
      <li><a href="/admin/deployments" title="add/edit deployments">Manage Deployments</a></li>
+     <li><a href="/admin/arrangements" title="add/edit arrangements">Manage Arrangements</a></li>
      <li><a href="/admin/users" title="manage users">Manage Users</a></li>
      <li><a href="/login" title="logout">Logout</a></li>
     </ul>
