--- a/templates/admin/repositories.twig
+++ b/templates/admin/repositories.twig
@@ -1,18 +1,27 @@
-<!DOCTYPE html>
-<html>
- <head>
- <title>GIT Repository Management</title>
- </head>
- <body>
-   <form name="add-repo" action="/repositories" method="post"> 
-    url: <input type="text" name="url"><br>
-    email: <input type="text" name="email"><br>
-    shortname: <input type="text" name="shortname"><br>
+{% set page_title = "Repository Admin" %}
+{% include 'common/htmltop.twig' %}
+{% include 'common/header.twig' %}
+
+   <form name="add-repo" action="/admin/repositories" method="post"> 
+    Arrangement: 
+        <select name="arrId">
+        {% for arr in arrangements %}
+            <option value="{{arr.ArrangementId}}">{{arr.ShortName}}
+        {% endfor %}
+        </select></br>
+
+    shortname: <input type="text" name="shortName"><br>
+    GitHub User Name: <input type="text" name="githubUser"><br>
+    GitHub Repository: <input type="text" name="githubRepo"><br>
+    email: <input type="text" name="ownerEmail"><br>
     description: <input type="text" name="description"><br>
     <input type="submit" name="submit" value="add repository"><br>
    </form>
+
+{% if repos %}
    {% for repository in repositories %}
         <a href='/repositories/{{ repository.RepoID}}/'>{{repository.ShortName}}</a><br/>
    {% endfor %}
+{% endif %}
  </body>
 </html>
