--- a/templates/admin/servers.twig
+++ b/templates/admin/servers.twig
@@ -1,28 +1,44 @@
+{% set page_title = "Server Administration" %}
 {% include 'common/htmltop.twig' %}
 {% include 'common/header.twig' %}
 {% if envs %}
-{% if error %}
-    {{ error }}
-{% endif %}
-   <form name="add-server" action="/servers" method="post">
+  {% if servers %}
+    <ul>
+    {% for server in servers %}
+      <li><a href='/servers/{{server.HostName}}'>{{server.HostName}}</a> ({{ server.Environment }})</li>
+    {% endfor %}
+    </ul>
+  {% else %}
+    <p>There are no servers setup yet.</p>
+  {% endif %}
+  {% if errors %}
+    <ul>
+    {% for error in errors %}
+      <li>{{ error }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+   <form action="/admin/servers" method="post">
     <fieldset>
      <legend>Add Server</legend>
-     <div><label for="hostname">hostname</label></div>
+     <div><label for="hostname">Hostname</label></div>
      <div><input type="text" name="hostname" id="hostname"></div>
-     <div><label for="env">environment</label></div>
+     <div><label for="env">Environment</label></div>
      <div>
-      <select id="env" name="env">
-{% for env in envs %}
-       <option name="{{ env.EnvId }}">{{ env.Name }}</option>
-{% endfor %}
+      <select id="env" name="envId">
+  {% for env in envs %}
+    {% if env.EnvId == selectedEnv %}
+      {% set isSelected = " selected=\"selected\""%}
+    {% else %}
+      {% set isSelected = "" %}
+    {% endif %}
+       <option value="{{ env.EnvId }}"{{ isSelected }}>{{ env.Name }}</option>
+  {% endfor %}
       </select>
      </div>
      <div><input type="submit" value="add server"></div>
     </fieldset>
    </form>
-   {% for server in servers %}
-        <a href='/servers/{{server.ServerId}}'>{{server.HostName}}</a><br/>
-   {% endfor %}
 {% else %}
     <p>It looks like you have not <a href="/admin/envs" title="manage environments">setup environments</a> yet. You cannot add servers without having an environment bucket to assign them to.</p>
 {% endif %}
