--- a/templates/common/htmltop.twig
+++ b/templates/common/htmltop.twig
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title>{{page_title}} - HAL 9000</title>
+  <meta charset="utf-8">
+  <link type="image/x-icon" rel="shortcut icon" href="/hal.ico"> <!-- for ie -->
+  <link type="image/png" rel="apple-touch-icon-precomposed" sizes="57x57" href="/hal-57px.png"> <!-- for apple -->
+  <link type="image/png" rel="apple-touch-icon-precomposed" sizes="72x72" href="/hal-72px.png"> <!-- for apple -->
+  <link type="image/png" rel="apple-touch-icon-precomposed" sizes="114x114" href="/hal-114px.png"> <!-- for apple -->
+  <link type="image/png" rel="apple-touch-icon-precomposed" sizes="144x144" href="/hal-144px.png"> <!-- for apple -->
+  <link type="image/png" rel="icon" href="/hal.png"> <!-- for the rest of the world -->
+  <title>{% if page_title %}{{page_title}} - {% endif %}HAL 9000</title>
+  <meta name="format-detection" content="telephone=no">
+  <meta name="author" content="Matthew Nagi &lt;mattnagi@quickenloans.com&gt;">
+  <meta name="author" content="Bridget Schiefer &lt;bridgetschiefer@quickenloans.com&gt;">
+  <meta name="description" content="A push tool for code being deployed on Linux/UNIX boxes.">
  </head>
