--- a/templates/login.twig
+++ b/templates/login.twig
@@ -6,10 +6,10 @@
 {% endif %}
    <form action="/login" method="post"> 
     <fieldset>
-     <legend>login</legend>
-     <div><label for="username">username</label></div>
+     <legend>Login</legend>
+     <div><label for="username">Username</label></div>
      <div><input type="text" id="username" name="username"></div>
-     <div><label for="password">password</label></div>
+     <div><label for="password">Password</label></div>
      <div><input type="password" id="password" name="password"></div>
      <div><input type="submit" value="login"></div>
     </fieldset>
