--- a/templates/admin/repositories.twig
+++ b/templates/admin/repositories.twig
@@ -18,7 +18,7 @@
     <input type="submit" name="submit" value="add repository"><br>
    </form>
 
-{% if repos %}
+{% if repositories %}
    {% for repository in repositories %}
         <a href='/repositories/{{ repository.RepoID}}/'>{{repository.ShortName}}</a><br/>
    {% endfor %}
