--- a/templates/admin/environments.twig
+++ b/templates/admin/environments.twig
@@ -1,24 +1,35 @@
 {% set page_title = "Environment Admin" %}
 {% include 'common/htmltop.twig' %}
 {% include 'common/header.twig' %}
+
 {% if envs %}
-<form action="?reorder=1" method="post">
-  <ul>
+  <form action="?reorder=1" method="post">
+    <ul>
   {% for env in envs %}
-   <li><input type="text" size="1" name="env{{ env.EnvId }}" value="{{ env.DispOrder }}"> <a href="/envs/{{ env.Name }}">{{ env.Name }}</a></li>
+      <li><input type="text" size="1" maxlength="3" required name="env{{ env.EnvironmentId }}" value="{{ env.DispOrder }}"> <a href="/e/{{ env.ShortName }}">{{ env.ShortName }}</a></li>
   {% endfor %}
- </ul>
- <div><button type="submit">Re-Order Environments</button></div>
-</form>
+    </ul>
+    <div><button type="submit">Re-Order Environments</button></div>
+  </form>
 {% else %}
-<p>It looks like you don't have any environments yet. Add one using the form below:</p>
+  <p>It looks like you don't have any environments yet. Add one using the form below:</p>
 {% endif %}
-<form action="" method="post">
- <fieldset>
-  <legend>Add Environment</legend>
-  <div><label for="envname">Name</label></div>
-  <div><input type="text" name="envname" id="envname"></div>
-  <div><button type="submit">Add Environment</button></div>
- </fieldset>
-</form>
+
+{% if errors %}
+  <ul>
+  {% for error in errors %}
+    <li>{{ error }}</li>
+  {% endfor %}
+  </ul>
+{% endif %}
+
+  <form action="" method="post">
+    <fieldset>
+      <legend>Add Environment</legend>
+      <div><label for="envname">Name</label></div>
+      <div><input type="text" name="envname" id="envname" maxlength="24" size="24" required value="{{ cur_env }}"></div>
+      <div><button type="submit">Add Environment</button></div>
+    </fieldset>
+  </form>
+
 {% include 'common/htmlbottom.twig' %}
