--- a/templates/admin/users.twig
+++ b/templates/admin/users.twig
@@ -5,6 +5,7 @@
 <table>
  <thead>
   <tr>
+   <th>Page</th>
    <th>Common ID</th>
    <th>Display Name</th>
    <th>Username</th>
@@ -14,7 +15,8 @@
  <tbody>
 {% for user in users %}
   <tr>
-   <td><a href="/users/{{ user.CommonId }}">{{ user.CommonId }}</a></td>
+   <td><a href="/u/{{ user.CommonId }}">/u/{{ user.CommonId }}</a></td>
+   <td>{{ user.CommonId }}</td>
    <td>{{ user.DisplayName }}</td>
    <td>{{ user.UserName }}</td>
    <td>{{ user.Email }}</td>
