Finish implementation of deployments

--- a/templates/admin/dashboard.twig
+++ b/templates/admin/dashboard.twig
@@ -2,7 +2,7 @@
 {% include 'common/header.twig' %}
 <ul>
  <li>Total Users: {{ total_users }}</li>
- <li>Total Projects: (not live yet)</li>
+ <li>Total Repositories: {{ total_projects }}</li>
  <li>Total Pushes: (not live yet)</li>
  <li>Production Pushes Today: (not live yet)</li>
 </ul>
