Repository view refactored
* Added Arrangement table join to repo list.
* Fixed DateTime objects not being created for listing Deployments by Repo
* Added navigation links to go backward in arr > repo > deps choices
* Fixed first character of commit hashes being hidden
* Last pushed date now shows in America/Detroit timezone

--- a/templates/repositoriesInArrangement.twig
+++ b/templates/repositoriesInArrangement.twig
@@ -2,7 +2,8 @@
 {% include 'common/htmltop.twig' %}
 {% include 'common/header.twig' %}
 
-<div><h2>Repositories in {{ arrangement }}:</h2></div>
+<p><a href="/">Back to Arrangements</a></p>
+<h2>Repositories in {{ arrangement }}:</h2>
 <ul>
     {% for repository in repositories %}
         <li>
