--- a/templates/arrangement.twig
+++ b/templates/arrangement.twig
@@ -2,7 +2,7 @@
 {% include 'common/htmltop.twig' %}
 {% include 'common/header.twig' %}
 
-<p><a href="/">Back to Arrangements</a></p>
+<p><a href="/a">Back to Arrangements</a></p>
 <h2>Repositories in {{ arrangement }}:</h2>
 <ul>
     {% for repository in repositories %}
