--- a/templates/login.twig
+++ b/templates/login.twig
@@ -5,7 +5,7 @@
 {% if error %}
    <p>{{ error }}</p>
 {% endif %}
-   <form action="/login" method="post"> 
+   <form action="" method="post">
     <fieldset>
      <legend>Login</legend>
      <div><label for="username">Username</label></div>
