Added a count function for logs

--- a/templates/repository.twig
+++ b/templates/repository.twig
@@ -43,6 +43,7 @@
 </form>
 
 <h2>Log Entries for {{ repo.ShortName }}</h2>
+Total #: {{ totalLogs }}
 <table>
     <tr>
         <td>Push Start</td>
