initial frontend setup

--- a/templates/common/header.twig
+++ b/templates/common/header.twig
@@ -1,16 +1,31 @@
-  <header>
-   <h1>HAL 9000 — Child of Codepushinator, QBERT and Github Enterprise</h1>
-   <nav>
-    <ul>
-     <li><a href="/a" title="project groups">Repository Groups</a></li>
-     <li><a href="/admin" title="admin dashboard">Admin Dashboard</a></li>
-     <li><a href="/admin/arrangements" title="add/edit arrangements">Manage Arrangements</a></li>
-     <li><a href="/admin/repositories" title="add/edit repositories">Manage Repositories</a></li>
-     <li><a href="/admin/envs" title="environment admin">Manage Environments</a></li>
-     <li><a href="/admin/servers" title="add/edit servers">Manage Servers</a></li>
-     <li><a href="/admin/deployments" title="add/edit deployments">Manage Deployments</a></li>
-     <li><a href="/admin/users" title="manage users">Manage Users</a></li>
-     <li><a href="/logout" title="logout">Logout</a></li>
-    </ul>
-   </nav>
-  </header>
+    <header role="banner">
+        <div class="logo">
+            <a href="/" class="hal">
+                <div class="metal active">
+                    <div class="light">
+                        <div class="glowing-red">
+                            <div class="glowing-yellow"></div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <h1>HAL 9000</h1>
+        </div>
+
+        <h2 class="zeta">Child of Codepushinator, QBERT and Github Enterprise</h2>
+        <nav>
+            <ul class="nav">
+                <li><a href="/a" title="project groups">Repository Groups</a></li>
+                <li><a href="/admin" title="admin dashboard">Admin Dashboard</a></li>
+                <li><a href="/admin/arrangements" title="add/edit arrangements">Manage Arrangements</a></li>
+                <li><a href="/admin/repositories" title="add/edit repositories">Manage Repositories</a></li>
+                <li><a href="/admin/envs" title="environment admin">Manage Environments</a></li>
+                <li><a href="/admin/servers" title="add/edit servers">Manage Servers</a></li>
+                <li><a href="/admin/deployments" title="add/edit deployments">Manage Deployments</a></li>
+                <li><a href="/admin/users" title="manage users">Manage Users</a></li>
+                <li><a href="/logout" title="logout">Logout</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
